add a pvc to store custom voices

--- a/charts/wyoming-piper/values.yaml
+++ b/charts/wyoming-piper/values.yaml
@@ -102,6 +102,15 @@ volumeMounts: []
 #   mountPath: "/etc/foo"
 #   readOnly: true
 
+persistance:
+  config:
+    enabled: false
+    size: 10Gi
+    storageClass: local-path
+    accessModes:
+      - ReadWriteOnce
+
+
 nodeSelector: {}
 
 tolerations: []
